Another attempt to fix the dumb issue with JUnit tests breaking the Jekyll build

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	  </dependency> 
   </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/com/fighterz/main</sourceDirectory>
     <resources>
       <resource>
         <directory>Resources</directory>
